--- a/Panda.NuGet.BillbeeClient/Panda.NuGet.BillbeeClient.csproj
+++ b/Panda.NuGet.BillbeeClient/Panda.NuGet.BillbeeClient.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RepositoryUrl>https://github.com/pandapknaepel/billbee-csharp-sdk</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
